@@ -80,3 +80,4 @@ Collate:
     'rdirs.R'
     'IM.R'
     'YT.R'
+    'sync.R'
