@@ -24,6 +24,9 @@ export(QC)
 export(QQ)
 export(rdirs)
 export(reveal.js)
+export(sync)
+export(sync_img)
+export(sync_rnp)
 export(templates)
 export(tex2docx)
 export(tex2html)
