@@ -36,6 +36,9 @@ NEW FEATURES
 
 * `rdirs` reclusively creates multiple directories.
 
+* The sync family of functions has been introduced.  These functions provide 
+  quick between directories.  See `?sync` for more details.
+
 MINOR FEATURES
 
 * `html5` and `reveal.js` output now has a space between sections (slides)
